tdf#136242 disable changing selection while formula wizard is open

similar to tdf#124975

Change-Id: I926580083fdd1e2a4f9b03243edfccc060bea702
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/101703
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>